gdb: resolve source paths relative to builddir

This uses the ide_g_file_get_uncanonical_relative_path() helper to get
a file path that is more likely to match what gdb expects for the
--source argument when adding a breakpoint.

https://bugzilla.gnome.org/show_bug.cgi?id=791188